syntax = "proto3";

package fr.raven.proto.message.game;

option java_outer_classname = "DebugProto";

message DebugSignal {
  string name = 1;
  int32 value = 2;
}
